// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full integration test with allowSepCharsInLogicalIds feature 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"null_resource\\": [
          \\"provisioner\\"
        ]
      },
      \\"stackName\\": \\"hello-deploy\\",
      \\"version\\": \\"stubbed\\"
    },
    \\"outputs\\": {
    }
  },
  \\"provider\\": {
    \\"null\\": [
      {
      }
    ]
  },
  \\"resource\\": {
    \\"null_resource\\": {
      \\"hello-deploy_test-Foo_Bar_186E52EA\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"hello-deploy/test-Foo_Bar\\",
            \\"uniqueId\\": \\"hello-deploy_test-Foo_Bar_186E52EA\\"
          }
        },
        \\"provisioner\\": [
          {
            \\"local-exec\\": {
              \\"command\\": \\"echo \\\\\\"hello deploy\\\\\\"\\"
            }
          }
        ]
      }
    }
  },
  \\"terraform\\": {
    \\"backend\\": {
      \\"local\\": {
        \\"path\\": \\"terraform.tfstate\\"
      }
    },
    \\"required_providers\\": {
      \\"null\\": {
        \\"source\\": \\"null\\",
        \\"version\\": \\"undefined\\"
      }
    }
  }
}"
`;

exports[`full integration test with excludeStackIdFromLogicalIds feature 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"null_resource\\": [
          \\"provisioner\\"
        ]
      },
      \\"stackName\\": \\"hello-deploy\\",
      \\"version\\": \\"stubbed\\"
    },
    \\"outputs\\": {
    }
  },
  \\"provider\\": {
    \\"null\\": [
      {
      }
    ]
  },
  \\"resource\\": {
    \\"null_resource\\": {
      \\"testFooBar\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"hello-deploy/test-Foo_Bar\\",
            \\"uniqueId\\": \\"testFooBar\\"
          }
        },
        \\"provisioner\\": [
          {
            \\"local-exec\\": {
              \\"command\\": \\"echo \\\\\\"hello deploy\\\\\\"\\"
            }
          }
        ]
      }
    }
  },
  \\"terraform\\": {
    \\"backend\\": {
      \\"local\\": {
        \\"path\\": \\"terraform.tfstate\\"
      }
    },
    \\"required_providers\\": {
      \\"null\\": {
        \\"source\\": \\"null\\",
        \\"version\\": \\"undefined\\"
      }
    }
  }
}"
`;

exports[`full integration test without features 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"backend\\": \\"local\\",
      \\"overrides\\": {
        \\"null_resource\\": [
          \\"provisioner\\"
        ]
      },
      \\"stackName\\": \\"hello-deploy\\",
      \\"version\\": \\"stubbed\\"
    },
    \\"outputs\\": {
    }
  },
  \\"provider\\": {
    \\"null\\": [
      {
      }
    ]
  },
  \\"resource\\": {
    \\"null_resource\\": {
      \\"hellodeploy_testFooBar_186E52EA\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"hello-deploy/test-Foo_Bar\\",
            \\"uniqueId\\": \\"hellodeploy_testFooBar_186E52EA\\"
          }
        },
        \\"provisioner\\": [
          {
            \\"local-exec\\": {
              \\"command\\": \\"echo \\\\\\"hello deploy\\\\\\"\\"
            }
          }
        ]
      }
    }
  },
  \\"terraform\\": {
    \\"backend\\": {
      \\"local\\": {
        \\"path\\": \\"terraform.tfstate\\"
      }
    },
    \\"required_providers\\": {
      \\"null\\": {
        \\"source\\": \\"null\\",
        \\"version\\": \\"undefined\\"
      }
    }
  }
}"
`;
